--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
     "python.analysis.extraPaths": [
-        "d:/NW USER/Documents/RPA Framework/Fresh News Challenge/."
+        "d:/NW USER/Documents/RPA Framework/RPA Fresh News Challenge/."
     ]
 }
